--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
                     <div class="card-body">
                         <h5 class="card-title">IG DLER(cli)</h5>
                         <p class="card-text">A cli version of the ig-dler project, which works on android too!</p>
+                    </div>
+                    <div class="card-footer">
                         <a href="https://github.com/TH3-MA3STRO/ig-dler_cli" class="btn btn-primary btn-top">Github</a>
                     </div>
                 </div>
@@ -117,6 +119,8 @@
                     <div class="card-body">
                         <h5 class="card-title">IG DLER</h5>
                         <p class="card-text">Download stories, highlights, posts of an instagram account, without using any API</p>
+                    </div>
+                    <div class="card-footer">
                         <a href="https://www.github.com/TH3-MA3STRO/ig-dler" class="btn btn-primary btn-bottom">Github</a>
                     </div>
                 </div>
@@ -124,6 +128,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Messenger Spammer</h5>
                         <p class="card-text">Spam your friends on messenger with this easy to use tool :P</p>
+                    </div>
+                    <div class="card-footer">
                         <a href="https://www.github.com/TH3-MA3STRO/messenger-spammer" class="btn btn-primary btn-top">Github</a>
                     </div>
                 </div>
@@ -131,6 +137,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Whatsapp Spammer</h5>
                         <p class="card-text">Spam your WhatsApp groups and contacts with hundreds of messages</p>
+                    </div>
+                    <div class="card-footer">
                         <a href="https://github.com/TH3-MA3STRO/whatsapp-spammer" class="btn btn-primary btn-bottom">Github</a>
                     </div>
                 </div>
@@ -138,6 +146,8 @@
                     <div class="card-body">
                         <h5 class="card-title">IG Tools</h5>
                         <p class="card-text">Spam your friends' Instagram profile or #tags easily</p>
+                    </div>
+                    <div class="card-footer">
                         <a href="https://github.com/TH3-MA3STRO/ig-tools" class="btn btn-primary btn-top">Github</a>
                     </div>
                 </div>
@@ -145,7 +155,9 @@
                     <div class="card-body" style="position: relative;">
                         <h5 class="card-title">Portfolio</h5>
                         <p class="card-text">My portfolio website!</p>
-                        <a href="https://github.com/TH3-MA3STRO/th3-ma3stro.github.io" class="btn btn-primary btn-bottom">Github</a>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://github.com/TH3-MA3STRO/th3-ma3stro.github.io" class="btn mt-auto btn-primary btn-bottom">Github</a>
                     </div>
                 </div>
             </div>
