--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
 
-    <title>TH3-MA3STRO</title>
+    <title>RAHUL CHAUHAN</title>
   </head>
 
   <body data-spy="scroll" data-target="#navbar-example2">
@@ -29,7 +29,7 @@
       </div>
       <div class="animated-typer justify-content-center">
         <div class="head">
-          <h1 id="intro-name">Satyam Jha</h1>
+          <h1 id="intro-name">RAHUL CHAUHAN</h1>
           <p id="intro-typed">
             <span id="typed"></span><span class="cursor">|</span>
           </p>
@@ -49,6 +49,9 @@
         </li>
         <li class="nav-item">
           <a href="#b" class="nav-link">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a href="#b" class="nav-link">Skills</a>
         </li>
       </ul>
     </nav>
